--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.9",
     "formik": "^2.4.5",
+    "mongoose": "^8.2.2",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
