--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,9 @@
         "paths": {
             "@/*": ["./src/*"],
             "@hooks/*": ["./src/hooks/*"],
-            "@components/*": ["./src/components/*"]
+            "@components/*": ["./src/components/*"],
+            "@lib/*": ["./src/app/lib/*"],
+            "@models/*": ["./src/app/models/*"]
         }
     },
     "include": [
