--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
         "@heroicons/react": "^2.1.1",
         "@material-tailwind/react": "^2.1.9",
         "@types/bcrypt": "^5.0.2",
+        "@types/nodemailer": "^6.4.14",
         "bcrypt": "^5.1.1",
         "formik": "^2.4.5",
         "mongoose": "^8.2.2",
         "next": "14.1.3",
+        "nodemailer": "^6.9.12",
         "react": "^18",
         "react-dom": "^18",
         "yup": "^1.4.0"
