--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@heroicons/react": "^2.1.1",
         "@material-tailwind/react": "^2.1.9",
         "@types/bcrypt": "^5.0.2",
         "@types/nodemailer": "^6.4.14",
@@ -23,7 +22,7 @@
         "nodemailer": "^6.9.12",
         "react": "^18",
         "react-dom": "^18",
-        "react-horizontal-scrolling-menu": "^7.0.0",
+        "react-icons": "^5.2.0",
         "react-slick": "^0.30.2",
         "react-toastify": "^10.0.5",
         "slick-carousel": "^1.8.1",
