--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@material-tailwind/react": "^2.1.9",
+        "@stripe/stripe-js": "^3.4.0",
         "@types/bcrypt": "^5.0.2",
         "@types/nodemailer": "^6.4.14",
         "@types/react-slick": "^0.23.13",
@@ -26,6 +27,7 @@
         "react-slick": "^0.30.2",
         "react-toastify": "^10.0.5",
         "slick-carousel": "^1.8.1",
+        "stripe": "^15.5.0",
         "truncate": "^3.0.0",
         "yup": "^1.4.0"
     },
