--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "react-icons": "^5.2.0",
         "react-slick": "^0.30.2",
         "react-toastify": "^10.0.5",
+        "recharts": "^2.12.7",
         "slick-carousel": "^1.8.1",
         "stripe": "^15.5.0",
         "truncate": "^3.0.0",
