--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "next": "14.1.3",
         "next-auth": "^5.0.0-beta.15",
         "nodemailer": "^6.9.12",
+        "rc-slider": "^10.6.2",
         "react": "^18",
         "react-dom": "^18",
         "react-icons": "^5.2.0",
