--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
         "rc-slider": "^10.6.2",
         "react": "^18",
         "react-dom": "^18",
+        "react-google-charts": "^4.0.1",
         "react-icons": "^5.2.0",
         "react-slick": "^0.30.2",
         "react-toastify": "^10.0.5",
-        "recharts": "^2.12.7",
         "slick-carousel": "^1.8.1",
         "stripe": "^15.5.0",
         "truncate": "^3.0.0",
