--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "dateformat": "^5.0.3",
         "formik": "^2.4.5",
         "mongoose": "^8.2.2",
-        "next": "14.1.3",
+        "next": "^14.2.18",
         "next-auth": "^5.0.0-beta.15",
         "nodemailer": "^6.9.12",
         "rc-slider": "^10.6.2",
